[package]
name = "yswan"
version = "0.1.0"
edition = "2021"
authors = ["Siger Yang <siger.yang@outlook.com>"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
# toml = "0.5.9"
openssl = "0.10"
netlink-sys = "0.8.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-rustls = "0.23.4"
rustls = "0.20.5"
rustls-pemfile = "1.0.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio-tun = "0.5.2"
etherparse = "0.10.1"
pam = "0.7.0"
rpassword = "6.0.1"
